<?xml version="1.0" encoding="utf-8"?>

<!--
    activity_workout.xml - Trackathon
                Source file containing activity_activity_workout xml
    Language:        Java
    Platform:        Android SDK
    Course No.:      ESE 543
    Assignment No.:  Final Project
    Author:          Reddem Karan Reddy, SBU ID: 111218499
                     Gollapudi Sathya, SBU ID: 111155154
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/timerVal"
        android:textColor="#FFA500"
        android:textSize="70sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@color/grey_100">
        <Button
            android:id="@+id/startWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"
            android:text="@string/start_workout"
            android:theme="@style/ThemeOverlay.GreenButton"
            android:visibility="visible"
            tools:visibility="gone" />

        <Button
            android:id="@+id/pauseWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"
            android:text="@string/pause_workout"
            android:theme="@style/ThemeOverlay.RedButton"
            android:visibility="gone"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/finish_or_resume_workout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >
            <Button
                android:id="@+id/finishWorkoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finish_workout"
                android:theme="@style/ThemeOverlay.RedButton"
                android:visibility="gone"
                tools:visibility="gone"/>
            <Button
                android:id="@+id/resumeWorkoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resume_workout"
                android:theme="@style/ThemeOverlay.GreenButton"
                android:visibility="gone"
                tools:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/distanceValue_default_text"
            android:textColor="#FFA500"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paceValue"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:paddingRight="45dp"
            android:text="@string/paceValue_default_text"
            android:textColor="#FFA500"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:id="@+id/map"
        tools:context=".WorkoutActivity"/>

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

</LinearLayout>