<?xml version="1.0" encoding="utf-8"?>

<!--
    activity_save_workout.xml - Trackathon
                Source file containing activity_save_workout xml
    Language:        Java
    Platform:        Android SDK
    Course No.:      ESE 543
    Assignment No.:  Final Project
    Author:          Reddem Karan Reddy, SBU ID: 111218499
                     Gollapudi Sathya, SBU ID: 111155154
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="#FFA500"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalDistance"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance_default"
                android:textColor="#FFA500"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="#FFA500"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration_default"
                android:textColor="#FFA500"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:background="@color/grey_100">

        <Button
            android:id="@+id/discardWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/discard_workout"
            android:theme="@style/ThemeOverlay.RedButton"/>

        <Button
            android:id="@+id/saveWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/save_workout"
            android:theme="@style/ThemeOverlay.GreenButton"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:id="@+id/map"
        tools:context=".WorkoutActivity"/>

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible"
        android:gravity="bottom">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

</LinearLayout>