<?xml version="1.0" encoding="utf-8"?>

<!--
    activity_history.xml - Trackathon
                Source file containing activity_history xml
    Language:        Java
    Platform:        Android SDK
    Course No.:      ESE 543
    Assignment No.:  Final Project
    Author:          Reddem Karan Reddy, SBU ID: 111218499
                     Gollapudi Sathya, SBU ID: 111155154
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:background="@color/grey_100">

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_home"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:id="@+id/new_workout_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_workout"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:background="@color/grey_100">

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:text="@string/refresh"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>
    </LinearLayout>

    <ListView
        android:id="@+id/workouts_history"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible"
        android:gravity="bottom">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>
</LinearLayout>